# check_cep

./: .gitignore  .gitmodules  CHANGES.md  LICENSE  Makefile  README.md  TUTORIAL.md  WRITING-TESTS.md  pyproject.toml  setup-omd-site.sh
.agents/skills/: playwright-skill
.agents/skills/check-cep-vision/: SKILL.md
.agents/skills/sakuli-migration/: SKILL.md
docs/: CONTEXT.md  OUTPUT.md
docs/lessons-learned/: 002-image-matching.md  002-test-env-setup.md  002-x11-forwarding.md  003-wayland-spectate-vnc.md  005-lightpanda-browser.md  017-s3-tgz-source.md
scripts/: generate-teaser.sh
scripts/teaser/: playwright.config.ts  record-report.js  teaser-fail.test.ts  teaser-pass.test.ts
src/: .dockerignore  Dockerfile  check_cep
src/container/: Dockerfile  package-lock.json  package.json  run.py
src/container/check-cep-helpers/: index.d.ts  index.js  package.json
src/container/check-cep-vision/: index.d.ts  index.js  package.json
src/container/image/: chrome-wrapper  patch-lightpanda.js  run.py
src/container/plugins/: dest_s3.py
tests/: conftest.py
tests/compose/: docker-compose.yml
tests/fixtures/tc_fail/: tc_fail.test.ts
tests/fixtures/tc_lp_pass/: tc_lp_pass.test.ts
tests/fixtures/tc_marketplace_anchor_then_target/: README.md  capture-templates.mjs  playwright.config.ts  (+1 more)
tests/integration/: conftest.py  test_check_cep.py  test_collision.py  test_loki.py  test_modes.py  test_report_management.py  test_s3_source.py
tests/unit/: conftest.py  test_cleanup.py  test_resolve_path_template.py  test_run_context.py  test_source_plugins.py
(+64 files in other folders)
