[project]
name = "check-cep"
version = "2.0.0"
description = "Nagios/Naemon plugin for running Playwright E2E tests in Podman containers"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
s3 = ["boto3"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"
